--- a/src/index.css
+++ b/src/index.css
@@ -26,8 +26,8 @@
   width: 10px;
   height: 10px;
   border-radius: 5px;
-  background-color: #9880ff;
-  color: #9880ff;
+  background-color: #2563eb;
+  color: #2563eb;
   box-shadow: 9999px 0 0 -5px;
   animation: dot-pulse 1.5s infinite linear;
   animation-delay: 0.25s;
@@ -41,8 +41,8 @@
   width: 10px;
   height: 10px;
   border-radius: 5px;
-  background-color: #9880ff;
-  color: #9880ff;
+  background-color: #2563eb;
+  color: #2563eb;
 }
 .dot-pulse::before {
   box-shadow: 9984px 0 0 -5px;
